@@ -1,3 +1,4 @@
+local item_sounds = require("__base__.prototypes.item_sounds")
 data:extend({{
   type = "item-with-entity-data",
   name = "electric-locomotive",
@@ -6,7 +7,10 @@ data:extend({{
   subgroup = "train-transport",
   order = "a[train-system]-f[locomotive]",
   place_result = "electric-locomotive",
-  stack_size = 5
+  stack_size = 5,
+  inventory_move_sound = item_sounds.locomotive_inventory_move,
+  pick_sound = item_sounds.locomotive_inventory_pickup,
+  drop_sound = item_sounds.locomotive_inventory_move
 }, 
 -- Electric Wagon Locomotive
 {
@@ -17,7 +21,10 @@ data:extend({{
   subgroup = "train-transport",
   order = "a[train-system]-f[locomotiveb]",
   place_result = "electric-locomotive-wagon",
-  stack_size = 5
+  stack_size = 5,
+  inventory_move_sound = item_sounds.locomotive_inventory_move,
+  pick_sound = item_sounds.locomotive_inventory_pickup,
+  drop_sound = item_sounds.locomotive_inventory_move
 },
 {
   type = "item-with-entity-data",
@@ -28,7 +35,10 @@ data:extend({{
   subgroup = "train-transport",
   order = "a[train-system]-h[cargo-wagon]",
   place_result = "electric-cargo-wagon",
-  stack_size = 5
+  stack_size = 5,
+  inventory_move_sound = item_sounds.metal_large_inventory_move,
+  pick_sound = item_sounds.locomotive_inventory_pickup,
+  drop_sound = item_sounds.metal_large_inventory_move
 }, {
   type = "item-with-entity-data",
   name = "electric-fluid-wagon",
@@ -38,5 +48,8 @@ data:extend({{
   subgroup = "train-transport",
   order = "a[train-system]-i[fluid-wagon]",
   place_result = "electric-fluid-wagon",
-  stack_size = 5
+  stack_size = 5,
+  inventory_move_sound = item_sounds.metal_large_inventory_move,
+  pick_sound = item_sounds.locomotive_inventory_pickup,
+  drop_sound = item_sounds.metal_large_inventory_move
 }})
