@@ -8,6 +8,7 @@ Date: XX. 10. 2024
   Features:
     - (Space Age) Added a startup setting (default true) to lock electric train tech behind electromagnetism. This also update recipes to utiluse electromagnetic facilities and newer materials
     - (Space Age) You can only stack one electric Locomotive/Wagon in a rocket at a time. (I would encourage crafting on site)
+    - Added electrical pickup/placement inventory sounds
 ---------------------------------------------------------------------------------------------------
 Version: 0.3.1
 Date: 29. 10. 2024
